[package]
name = "cumulus-client-service"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
futures = "0.3.28"

# Substrate
sc-client-api = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-consensus = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-transaction-pool = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-rpc = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-service = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-sysinfo = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-telemetry = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-network = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-network-sync = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-utils = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-network-transactions = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-api = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-blockchain = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-consensus = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-core = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-runtime = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-transaction-pool = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }

# Polkadot
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }

# Cumulus
cumulus-client-cli = { path = "../cli" }
cumulus-client-collator = { path = "../collator" }
cumulus-client-consensus-common = { path = "../consensus/common" }
cumulus-client-pov-recovery = { path = "../pov-recovery" }
cumulus-client-network = { path = "../network" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-relay-chain-interface = { path = "../relay-chain-interface" }
cumulus-relay-chain-inprocess-interface = { path = "../relay-chain-inprocess-interface" }
cumulus-relay-chain-minimal-node = { path = "../relay-chain-minimal-node" }
