[package]
name = "parachain-template-node"
version = "0.1.0"
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a parachain."
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/cumulus/"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.2.3", features = ["derive"] }
log = "0.4.17"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.160", features = ["derive"] }
jsonrpsee = { version = "0.16.2", features = ["server"] }

# Local
parachain-template-runtime = { path = "../runtime" }

# Substrate
frame-benchmarking = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
frame-benchmarking-cli = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
pallet-transaction-payment-rpc = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-basic-authorship = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-chain-spec = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-cli = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-client-api = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-consensus = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-executor = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-network = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-network-sync = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-rpc = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-service = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-sysinfo = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-telemetry = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-tracing = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-transaction-pool = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-transaction-pool-api = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-api = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-block-builder = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-blockchain = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-consensus-aura = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-core = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-keystore = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-io = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-runtime = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-timestamp = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
substrate-frame-rpc-system = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
substrate-prometheus-endpoint = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
try-runtime-cli = { git = "https://github.com/NodleCode/substrate", optional = true , branch = "aliX/rescue-parachain" }

# Polkadot
polkadot-cli = { git = "https://github.com/paritytech/polkadot", features = ["rococo-native"] , branch = "release-v0.9.42" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.42" }

# Cumulus
cumulus-client-cli = { path = "../../client/cli" }
cumulus-client-consensus-aura = { path = "../../client/consensus/aura" }
cumulus-client-consensus-common = { path = "../../client/consensus/common" }
cumulus-client-service = { path = "../../client/service" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../../primitives/parachain-inherent" }
cumulus-relay-chain-interface = { path = "../../client/relay-chain-interface" }
color-print = "0.3.4"

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }

[features]
default = []
runtime-benchmarks = [
	"try-runtime-cli/try-runtime",
	"parachain-template-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = [
	"try-runtime-cli/try-runtime",
	"parachain-template-runtime/try-runtime"
]
