[package]
name = "cumulus-test-service"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[[bin]]
name = "test-parachain"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.68"
clap = { version = "4.2.3", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
criterion = { version = "0.4.0", features = [ "async_tokio" ] }
jsonrpsee = { version = "0.16.2", features = ["server"] }
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros"] }
tracing = "0.1.37"
url = "2.3.1"

# Substrate
frame-system = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
frame-system-rpc-runtime-api = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
pallet-transaction-payment = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-basic-authorship = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-chain-spec = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-client-api = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-consensus = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-executor = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-network = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-service = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-tracing = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-transaction-pool = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-transaction-pool-api = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-telemetry = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-arithmetic = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-blockchain = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-core = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-io = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-keyring = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-runtime = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
sp-state-machine = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-tracing = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-timestamp = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-trie = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
substrate-test-client = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sc-cli = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }

# Polkadot
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }
polkadot-node-subsystem = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }

# Cumulus
cumulus-client-cli = { path = "../../client/cli" }
parachains-common = { path = "../../parachains/common" }
cumulus-client-consensus-common = { path = "../../client/consensus/common" }
cumulus-client-consensus-relay-chain = { path = "../../client/consensus/relay-chain" }
cumulus-client-service = { path = "../../client/service" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../../primitives/parachain-inherent" }
cumulus-relay-chain-inprocess-interface = { path = "../../client/relay-chain-inprocess-interface" }
cumulus-relay-chain-interface = { path = "../../client/relay-chain-interface" }
cumulus-test-relay-validation-worker-provider = { path = "../relay-validation-worker-provider" }
cumulus-test-runtime = { path = "../runtime" }
cumulus-relay-chain-minimal-node = { path = "../../client/relay-chain-minimal-node" }
cumulus-client-pov-recovery = { path = "../../client/pov-recovery" }

[dev-dependencies]
futures = "0.3.28"
portpicker = "0.1.1"

# Polkadot dependencies
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }

# Substrate dependencies
sc-cli = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
substrate-test-utils = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }

[features]
runtime-benchmarks = ["polkadot-test-service/runtime-benchmarks"]

[[bench]]
name = "transaction_throughput"
harness = false
