[package]
name = "cumulus-client-consensus-relay-chain"
description = "The relay-chain provided consensus algorithm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
async-trait = "0.1.68"
futures = "0.3.28"
parking_lot = "0.12.1"
tracing = "0.1.37"

# Substrate
sc-consensus = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-api = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-block-builder = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-blockchain = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-consensus = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-core = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-inherents = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
sp-runtime = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }
substrate-prometheus-endpoint = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }

# Cumulus
cumulus-client-consensus-common = { path = "../common" }
cumulus-primitives-core = { path = "../../../primitives/core" }
cumulus-relay-chain-interface = { path = "../../relay-chain-interface" }
