[package]
name = "asset-test-utils"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Statemint parachain runtime"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }

# Substrate
frame-support = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
frame-system = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
pallet-assets = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
pallet-balances = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
pallet-session = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
sp-consensus-aura = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
sp-io = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
sp-runtime = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
sp-std = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
sp-core = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }

# Cumulus
cumulus-pallet-parachain-system = { path = "../../../../pallets/parachain-system", default-features = false }
cumulus-pallet-xcmp-queue = { path = "../../../../pallets/xcmp-queue", default-features = false }
pallet-collator-selection = { path = "../../../../pallets/collator-selection", default-features = false }
parachains-common = { path = "../../../common", default-features = false }
assets-common = { path = "../common", default-features = false }
cumulus-primitives-core = { path = "../../../../primitives/core", default-features = false }
cumulus-primitives-parachain-inherent = { path = "../../../../primitives/parachain-inherent", default-features = false }
cumulus-test-relay-sproof-builder = { path = "../../../../test/relay-sproof-builder", default-features = false }
parachain-info = { path = "../../../../parachains/pallets/parachain-info", default-features = false }

# Polkadot
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.42" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.42" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.42" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.42" }

[dev-dependencies]
hex-literal = "0.3.4"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/NodleCode/substrate", branch = "aliX/rescue-parachain" }

[features]
default = [ "std" ]
std = [
    "cumulus-pallet-parachain-system/std",
    "cumulus-primitives-core/std",
    "cumulus-test-relay-sproof-builder/std",
    "cumulus-primitives-parachain-inherent/std",
    "frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"cumulus-pallet-parachain-system/std",
	"pallet-collator-selection/std",
    "pallet-session/std",
    "assets-common/std",
    "parachains-common/std",
	"parachain-info/std",
	"polkadot-parachain/std",
    "sp-consensus-aura/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "xcm/std",
    "xcm-executor/std",
    "pallet-xcm/std",
    "cumulus-pallet-xcmp-queue/std",
]
