[package]
name = "rococo-parachain-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Simple runtime used by the rococo parachain(s)"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = { git = "https://github.com/NodleCode/substrate", optional = true, default-features = false, branch = "aliX/rescue-parachain" }
frame-executive = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
frame-support = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
frame-system = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
frame-system-rpc-runtime-api = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
pallet-assets = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
pallet-aura = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
pallet-balances = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
pallet-sudo = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
pallet-timestamp = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
pallet-transaction-payment = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
sp-api = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
sp-block-builder = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
sp-consensus-aura = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
sp-core = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
sp-inherents = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
sp-offchain = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
sp-runtime = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
sp-session = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
sp-std = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
sp-transaction-pool = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }
sp-version = { git = "https://github.com/NodleCode/substrate", default-features = false, branch = "aliX/rescue-prachain" }

# Polkadot
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.42" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.42" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.42" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.42" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.42" }

# Cumulus
cumulus-pallet-aura-ext = { path = "../../../../pallets/aura-ext", default-features = false }
cumulus-pallet-dmp-queue = { path = "../../../../pallets/dmp-queue", default-features = false }
cumulus-pallet-parachain-system = { path = "../../../../pallets/parachain-system", default-features = false }
cumulus-pallet-xcm = { path = "../../../../pallets/xcm", default-features = false }
cumulus-pallet-xcmp-queue = { path = "../../../../pallets/xcmp-queue", default-features = false }
cumulus-ping = { path = "../../../pallets/ping", default-features = false }
cumulus-primitives-core = { path = "../../../../primitives/core", default-features = false }
cumulus-primitives-timestamp = { path = "../../../../primitives/timestamp", default-features = false }
cumulus-primitives-utility = { path = "../../../../primitives/utility", default-features = false }
parachains-common = { path = "../../../common", default-features = false }
parachain-info = { path = "../../../pallets/parachain-info", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/NodleCode/substrate", optional = true , branch = "aliX/rescue-parachain" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-xcm/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-ping/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"parachain-info/std",
	"parachains-common/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
